# cql

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Parser.cpp  Parser.h  Partitioner.cpp  Partitioner.h  README.md  calculator.cpp  cql_instance.cpp  cql_instance.h  executor.cpp  executor.h  expr.cpp  expr.h  expr_util.cpp  expr_util.h  expr_util_test.cpp  partition_test.cpp  planner.cpp  planner.h  schema.cpp  schema.h  schema_test.cpp  shell.cpp  string_util.cpp  string_util.h  string_util_test.cpp  table.cpp  table.h  table_test.cpp  tuple.cpp  tuple.h  tuple_test.cpp  type.cpp  type.h  variable_manager.h  variable_manager_test.cpp
